Fixed minus button resetting when there's 2 in cart, and visibility of close cart button

--- a/web/styles.css
+++ b/web/styles.css
@@ -173,7 +173,7 @@ a:hover {
   padding: 24px;
   transform: translateX(100%);
   transition: transform 0.3s;
-  overflow-y: auto;
+  overflow: visible;
   z-index: 999;
 }
 
